# data-platform-framework

./: .dockerignore  .env.test  .gitignore  AGENTS.md  Dockerfile  Dockerfile.spark  README.md  config.example.json  config.example.yml  config.schema.json  demo.py  docker-compose.yml  example.py  example.yml  pyproject.toml  test.py
docs/: FRAMEWORK.md  IMPLEMENTATION.md  QUESTIONS.md  ROADMAP.md  TESTS.md  VISION.md  reader.md  tableflow.drawio  writer.md
metadata/: contract-example.yml
reference_docs/: pytest.md  src_database_coupling_code_review.md  uv.md
scripts/: test-all.sh  test-integration.sh  test-unit.sh
sql/: test_users.sql
src/: __init__.py  cli.py  data_contract.py  data_quality.py  database.py  example_job.py  exceptions.py  helpers.py  protocols.py  reader.py  writer.py
src/database/: connection.py  helpers.py
src/utils/: catalog.py  config.py
tests/: conftest.py
tests/integration/: conftest.py  test_contract_loading_integration.py  test_reader.py  test_writer_integration.py
tests/unit/: test_cli.py  test_cli_unit.py  test_data_contract_unit.py  test_data_quality_unit.py  test_database_connection_unit.py  test_database_helpers.py  test_helpers.py  test_helpers_unit.py  test_protocols_unit.py  test_reader_unit.py  test_writer.py  test_writer_unit.py
