[project]
name = "data-platform-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.40.1",
    "pyarrow>=18.1.0",
    "sqlalchemy>=2.0.49",
    "pyyaml>=6.0.2",
    "psycopg[binary]>=3.2.9",
]
