[project]
name = "data-platform-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.40.1",
    "pyarrow>=18.1.0",
    "sqlalchemy>=2.0.49",
    "pyyaml>=6.0.2",
    "psycopg[binary]>=3.2.9",
    "connectorx>=0.4.5",
]

[project.scripts]
fw = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: tests that do not require external services",
    "integration: tests that require the PostgreSQL test database",
]
